--- a/components/Stylesheet/package.json
+++ b/components/Stylesheet/package.json
@@ -2,9 +2,9 @@
   "name": "astro-ui-stylesheet",
   "author": "aFuzzyBear",
   "keywords": ["astro","astro component","astro stylesheet"],
-  "description": "Astro StyleSheet Link Component, This single Component provides the interface to apply many stylesheets in one place, have it also apply relevant sanitize.css files that are required",
+  "description": "Astro StyleSheet <link> Component, This single Component provides the interface to apply a single stylesheet or many stylesheets in one place, have it also apply relevant sanitize.css scripts through use of a single Prop",
   "license": "MIT",
-  "version": "1.0.6",
+  "version": "2.0.0",
   "homepage": "https://github.com/aFuzzyBear/astro-academy/tree/master/packages/astro-ui/head/stylesheet",
   "bugs": {
     "url": "https://github.com/aFuzzyBear/astro-academy/tree/master/packages/astro-ui/head/stylesheet/issues"
