--- a/components/XElement/package.json
+++ b/components/XElement/package.json
@@ -1,6 +1,6 @@
 {
   "name": "astro-xelement",
-  "version": "1.🎉2.0",
+  "version": "1.2.0",
   "description": "XElement is a powerful Astro Web Component generator. Create your own  Astro Web Components using HTML Elements with additional Client-Side JS interactivity sprinkled into the Element.",
   "keywords": [
     "XElement",
