--- a/components/XElement/package.json
+++ b/components/XElement/package.json
@@ -1,7 +1,7 @@
 {
   "name": "astro-xelement",
-  "version": "1.2.0",
-  "description": "XElement is a powerful Astro Web Component generator. Create your own  Astro Web Components using HTML Elements with additional Client-Side JS interactivity sprinkled into the Element.",
+  "version": "1.3.0",
+  "description": "XElement is a powerful Astro Web Component generator. Create your own  Astro compliant Web Components using HTML Elements with additional Client-Side JS interactivity sprinkled into the Element.",
   "keywords": [
     "XElement",
     "astro",
