Updated pkg.json to support the new export file

--- a/components/XElement/package.json
+++ b/components/XElement/package.json
@@ -14,7 +14,7 @@
   "license": "GPN3",
   "type": "module",
   "exports":{
-    ".":"./XElement.astro"
+    ".":"./XElement.js"
   },
   "repository": {
     "type": "git",
