--- a/components/XElement/package.json
+++ b/components/XElement/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "astro-xelement",
-  "version": "1.3.0",
+  "name": "astro-xelement-next",
+  "version": "0.1.0-next",
   "description": "XElement is a powerful Astro Web Component generator. Create your own  Astro compliant Web Components using HTML Elements with additional Client-Side JS interactivity sprinkled into the Element.",
   "keywords": [
     "XElement",
+    "XElement-next",
     "astro",
-    "astro-component",
     "astro-xelement",
+    "astro-xelement-next",
+    "astro-component",
     "astro-ui"
   ],
   "contributors": ["jonathantneal <jonathantneal@hotmail.com>(https://github.com/jonathantneal)","aFuzzyBear <drgaud@hotmail.com>(https://github.com/aFuzzyBear)"],
