--- a/components/Stylesheet/package.json
+++ b/components/Stylesheet/package.json
@@ -4,27 +4,19 @@
   "keywords": ["astro","astro component","astro stylesheet"],
   "description": "Astro StyleSheet <link> Component, This single Component provides the interface to apply a single stylesheet or many stylesheets in one place, have it also apply relevant sanitize.css scripts through use of a single Prop",
   "license": "MIT",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "homepage": "https://github.com/aFuzzyBear/astro-academy/tree/master/packages/astro-ui/head/stylesheet",
   "bugs": {
     "url": "https://github.com/aFuzzyBear/astro-academy/tree/master/packages/astro-ui/head/stylesheet/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/aFuzzyBear/astro-academy.git"},
-
-  "files": [
-    "src/components/Stylesheet.astro",
-    "src/index.js"
-  ],
-  "exports":"./src/index.js",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview"
+    "url": "https://github.com/aFuzzyBear/astro-academy.git"
   },
-  "devDependencies": {
-    "astro": "^0.20.6"
+    
+  "exports":{
+    ".":"./index.js",
+    "./Stylesheet": "./Stylesheet.astro"
   }
+
 }
