--- a/components/XElement/package.json
+++ b/components/XElement/package.json
@@ -1,10 +1,9 @@
 {
   "name": "astro-xelement",
-  "version": "3.0.0",
-  "description": "XElement is a powerful Astro Web Component generator. Create your own  Astro compliant Web Components using HTML Elements with additional Client-Side JS interactivity sprinkled into the Element.",
+  "version": "3.1.0",
+  "description": "XElement is a powerful Astro Web Component generator. Create your own  Astro compliant Web Components using HTML Elements with additional Client-Side JS/TS interactivity sprinkled into the Element.",
   "keywords": [
     "XElement",
-    "XElement-next",
     "astro",
     "astro-xelement",
     "astro-component",
@@ -25,5 +24,8 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aFuzzyBear/astro-ui.git"
+  },
+  "dependencies": {
+    "vite": "^2.6.14"
   }
 }
