Squashed commit of the following:
commit a86efa67a36bcb484c1aa4b0937d9162f8315168
Merge: e95f9a4 216fdf1
Author: Peter Singh <afuzzybear@outlook.com>
Date:   Thu Dec 30 14:58:12 2021 +0000

    Merge pull request #32 from aFuzzyBear/XElement-Docs

    X element docs

commit 216fdf1e118c91a7c0f6e39eac645d433688f39c
Merge: 5b87c95 e95f9a4
Author: aFuzzyBear <afuzzybear@outlook.com>
Date:   Thu Dec 30 14:57:58 2021 +0000

    Merge branch 'main' into XElement-Docs

commit 5b87c95de1fc4eb941146bfe15496d561173c5bd
Author: aFuzzyBear <afuzzybear@outlook.com>
Date:   Thu Dec 30 14:55:17 2021 +0000

    Added site files to branch

commit 910e4724304b9111bfbcba95e7a924b6b4486792
Author: aFuzzyBear <afuzzybear@outlook.com>
Date:   Wed Dec 29 14:35:17 2021 +0000

    Added Files
    -XElementVSFrameworks-Draft
    -MyFirstComponents
    -Styling

commit b837d1c2f7f04eda1ac6a5a5144469e94ba03e7a
Author: aFuzzyBear <afuzzybear@outlook.com>
Date:   Wed Dec 22 21:37:16 2021 +0000

    Added more content, sorted out files

commit e95f9a4d49c31d94d7a8c7df5144d73b4b3f2509
Merge: ac59509 6d7f0ab
Author: Peter Singh <afuzzybear@outlook.com>
Date:   Mon Dec 20 18:06:53 2021 +0000

    Merge pull request #29 from aFuzzyBear/XElement-Docs

    XElement-Docs

commit 6d7f0abe501704e8114fc623fe56c401f6b69b17
Author: aFuzzyBear <afuzzybear@outlook.com>
Date:   Mon Dec 20 14:57:21 2021 +0000

    prevent protential file clashes

commit 7ac18ff5b053cb7c798ee231db1ab1157d3d5f10
Author: aFuzzyBear <afuzzybear@outlook.com>
Date:   Mon Dec 20 13:46:15 2021 +0000

    First draft
    - Animate
    - define:vars
    - Fetch
    - Import
    - Store

commit ac59509f4ea20508e3a5a5353822508c01bdb3a8
Merge: 2dd9490 413e5ff
Author: Peter Singh <afuzzybear@outlook.com>
Date:   Sun Dec 19 16:44:48 2021 +0000

    Merge pull request #30 from sarah11918/main

    three of four docs slashed and burned

commit 413e5ff2fa6f0dfaa5f473d49ef955a67a3f1b79
Author: Sarah Rainsberger <5098874+sarah11918@users.noreply.gi

--- a/components/XElement/package.json
+++ b/components/XElement/package.json
@@ -1,24 +1,30 @@
 {
   "name": "astro-xelement",
-  "version": "1.3.2",
-  "description": "XElement is a powerful Astro Web Component generator. Create your own  Astro Web Components using HTML Elements with additional Client-Side JS interactivity sprinkled into the Element.",
+  "version": "3.1.0",
+  "description": "XElement is a powerful Astro Web Component generator. Create your own  Astro compliant Web Components using only HTML Elements with additional Client-Side JS/TS interactivity sprinkled into the Element.",
   "keywords": [
     "XElement",
     "astro",
-    "astro-component",
     "astro-xelement",
-    "astro-ui"
+    "astro-component",
+    "astro-ui",
+    "HTMl-component",
+    "Web-component",
+    "JS",
+    "TS"
   ],
-  "contributors": ["jonathantneal <jonathantneal@hotmail.com>(https://github.com/jonathantneal)","aFuzzyBear <drgaud@hotmail.com>(https://github.com/aFuzzyBear)"],
+  "contributors": [
+    "jonathantneal <jonathantneal@hotmail.com>(https://github.com/jonathantneal)",
+    "aFuzzyBear <afuzzybear@outlook.com>(https://github.com/aFuzzyBear)"
+  ],
   "homepage": "https://github.com/aFuzzyBear/astro-ui/tree/main/components/XElement#readme",
   "license": "GPN3",
   "type": "module",
-  "exports":{
-    ".":"./XElement.astro"
+  "exports": {
+    ".": "./XElement.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aFuzzyBear/astro-ui.git"
   }
-
 }
