--- a/www/XElement/package.json
+++ b/www/XElement/package.json
@@ -10,8 +10,11 @@
   },
   "devDependencies": {
     "astro": "^0.21.13",
+    "astro-stylesheet": "^3.0.0",
     "autoprefixer": "^10.4.1",
     "postcss": "^8.4.5",
+    "postcss-import": "^14.0.2",
+    "postcss-preset-env": "^7.1.0",
     "sass": "^1.45.1",
     "tailwindcss": "^3.0.8"
   },
