--- a/www/XElement/package.json
+++ b/www/XElement/package.json
@@ -9,16 +9,20 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^0.21.13",
+    "@codesandbox/sandpack-react": "^0.10.11",
+    "astro": "0.21.13",
     "astro-stylesheet": "^3.0.0",
+    "astro-xelement": "^3.1.0",
     "autoprefixer": "^10.4.1",
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^7.1.0",
+    "remark-codesandbox": "^0.10.0",
+    "remark-sources": "^1.1.0",
     "sass": "^1.45.1",
     "tailwindcss": "^3.0.8"
   },
   "dependencies": {
-    "tiny-glob": "^0.2.9"
+    "remark-toc": "^8.0.1"
   }
 }
