--- a/www/XElement/package.json
+++ b/www/XElement/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {
     "@codesandbox/sandpack-react": "^0.10.11",
-    "astro": "0.21.13",
+    "astro": "^0.22.8",
+    "astro-icon": "^0.5.3",
     "astro-stylesheet": "^3.0.0",
     "astro-xelement": "^3.1.0",
     "autoprefixer": "^10.4.1",
@@ -20,7 +21,9 @@
     "remark-codesandbox": "^0.10.0",
     "remark-sources": "^1.1.0",
     "sass": "^1.45.1",
-    "tailwindcss": "^3.0.8"
+    "tailwindcss": "^3.0.8",
+    "tiny-glob": "^0.2.9",
+    "toml-patch": "^0.2.3"
   },
   "dependencies": {
     "remark-toc": "^8.0.1"
