Added a few modules

--- a/www/XElement/package.json
+++ b/www/XElement/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
+    "search": "stork build --input src/config/StorkFileIndex.toml --output public/xelement.st",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview"
@@ -15,9 +16,12 @@
     "astro-stylesheet": "^3.0.0",
     "astro-xelement": "^3.1.0",
     "autoprefixer": "^10.4.1",
+    "dotenv": "^11.0.0",
+    "i18next": "^21.6.6",
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^7.1.0",
+    "rehype-autolink-headings": "^6.1.1",
     "remark-codesandbox": "^0.10.0",
     "remark-sources": "^1.1.0",
     "sass": "^1.45.1",
@@ -26,6 +30,6 @@
     "toml-patch": "^0.2.3"
   },
   "dependencies": {
-    "remark-toc": "^8.0.1"
+    "i18next-browser-languagedetector": "^6.1.2"
   }
 }
