--- a/www/xelement/package.json
+++ b/www/xelement/package.json
@@ -4,26 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
-<<<<<<< HEAD
-=======
     "search": "stork build --input src/config/Stork.toml --output public/xelement.st",
->>>>>>> www-xelement
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview"
   },
   "devDependencies": {
-<<<<<<< HEAD
-    "astro": "^0.21.13",
-    "autoprefixer": "^10.4.1",
-    "postcss": "^8.4.5",
-    "sass": "^1.45.1",
-    "tailwindcss": "^3.0.8"
-  },
-  "dependencies": {
-    "tiny-glob": "^0.2.9"
-=======
-    "@codesandbox/sandpack-react": "^0.10.11",
     "@tailwindcss/typography": "^0.5.0",
     "astro": "0.22.10",
     "astro-icon": "^0.5.3",
@@ -32,6 +18,7 @@
     "autoprefixer": "^10.4.1",
     "dotenv": "^11.0.0",
     "i18next": "^21.6.6",
+    "i18next-browser-languagedetector": "^6.1.2",
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^7.1.0",
@@ -44,7 +31,5 @@
     "toml-patch": "^0.2.3"
   },
   "dependencies": {
-    "i18next-browser-languagedetector": "^6.1.2"
->>>>>>> www-xelement
   }
 }
