--- a/www/xelement/package.json
+++ b/www/xelement/package.json
@@ -9,6 +9,15 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^0.22.17"
-  }
+    "astro": "^0.22.17",
+    "astro-icon": "^0.5.3",
+    "astro-spa": "^1.3.8",
+    "astro-stylesheet": "^3.0.0",
+    "astro-xelement": "^3.1.0",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "sass": "^1.49.0",
+    "tailwindcss": "^3.0.15"
+  },
+  "dependencies": {}
 }
