--- a/www/xelement/package.json
+++ b/www/xelement/package.json
@@ -9,8 +9,11 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.0",
     "astro": "^0.22.17",
     "astro-icon": "^0.5.3",
+    "astro-seo": "^0.4.2",
+    "astro-social-images": "^0.3.0",
     "astro-spa": "^1.3.8",
     "astro-stylesheet": "^3.0.0",
     "astro-xelement": "^3.1.0",
