--- a/www/xelement/package.json
+++ b/www/xelement/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/minimal",
+  "name": "astro-ui-ce-site-demo",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,18 +9,15 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.0",
-    "astro": "^0.22.17",
-    "astro-icon": "^0.5.3",
-    "astro-seo": "^0.4.2",
-    "astro-social-images": "^0.3.0",
-    "astro-spa": "^1.3.8",
-    "astro-stylesheet": "^3.0.0",
-    "astro-xelement": "^3.1.0",
+    "astro": "^0.22.20",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
     "sass": "^1.49.0",
-    "tailwindcss": "^3.0.15"
+    "tailwindcss": "^3.0.18"
   },
-  "dependencies": {}
+  "dependencies": {
+    "astro-fonts": "^0.1.0",
+    "astro-stylesheet": "^3.0.0",
+    "astro-xelement": "^3.1.1"
+  }
 }
