--- a/www/xelement/package.json
+++ b/www/xelement/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
+    "dev": "astro dev --verbose",
+    "start": "astro dev --verbose",
     "stork":"bash ./stork.sh",
     "prebuild":"npm run stork",
-    "build": "astro build",
-    "preview": "astro preview"
+    "build": "astro build --verbose",
+    "preview": "astro preview --verbose"
   },
   "devDependencies": {
     "astro": "^0.22.20",
