--- a/components/Fonts/package.json
+++ b/components/Fonts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "astro-fonts",
   "version": "0.1.0",
-  "description": "A Specialised Astro Font Component, letting you utilise any of the fonts availble to you using the 'google-webfonts-helper' API. This lets you to download font files to the local filesystem or use the fonts remotely. This one componet is your one-stop for Fonts. ",
+  "description": "A Specialised Astro Font Component, letting you utilise any of the fonts availble to you using Google Fonts. This lets you to download font files to the local filesystem or use the fonts remotely. This Font component is your one-stop shop for all your Fonts. ",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,7 +17,7 @@
     "google webfont helper",
     "font component"
   ],
-  "author": "aFuzzyBear",
+  "contributors": ["lostra01","aFuzzyBear"],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/aFuzzyBear/astro-academy/issues"
@@ -25,5 +25,9 @@
   "exports":{
     ".":"./Fonts.astro"
   },
-  "files": ["index.js","Fonts.astro"]
+  "files": ["index.js","Fonts.astro"],
+  "dependencies": {
+    "https": "^1.0.0",
+    "node-fetch": "^3.2.0"
+  }
 }
