--- a/components/XElement/package.json
+++ b/components/XElement/package.json
@@ -1,6 +1,6 @@
 {
   "name": "astro-xelement",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "description": "XElement is a powerful Astro Web Component generator. Create your own Astro compliant Web Components using only HTML Elements with additional Client-Side JS/TS interactivity sprinkled into the Element.",
   "keywords": [
     "XElement",
@@ -18,7 +18,7 @@
     "aFuzzyBear <afuzzybear@outlook.com>(https://github.com/aFuzzyBear)"
   ],
   "homepage": "https://github.com/aFuzzyBear/astro-ui/tree/main/components/XElement#readme",
-  "license": "GPN3",
+  "license": "GPU3",
   "type": "module",
   "exports": {
     ".": "./XElement.js"
