--- a/www/xelement/package.json
+++ b/www/xelement/package.json
@@ -6,7 +6,7 @@
     "dev": "astro dev --verbose",
     "start": "astro dev --verbose",
     "storky": "node ./stork/storky.mjs",
-    "prebuild": "bash ./stork/stork.sh",
+    "ignore": "bash ./stork/stork.sh",
     "build": "astro build --verbose",
     "preview": "astro preview --verbose"
   },
@@ -14,13 +14,13 @@
     "@astropub/assist": "^0.1.2",
     "@tailwindcss/typography": "^0.5.0",
     "astro": "^0.22.20",
-    "astro-fonts": "^0.2.0",
+    "astro-fonts": "^0.1.0",
     "astro-icon": "^0.5.3",
     "astro-seo": "^0.4.2",
     "astro-social-images": "^0.3.0",
     "astro-spa": "^1.3.8",
     "astro-stylesheet": "^3.0.0",
-    "astro-xelement": "^3.1.2",
+    "astro-xelement": "^3.1.6",
     "autoprefixer": "^10.4.2",
     "fast-glob": "^3.2.11",
     "postcss": "^8.4.5",
