Stylish updates made to the stylesheets

--- a/components/Stylesheet/package.json
+++ b/components/Stylesheet/package.json
@@ -1,10 +1,16 @@
 {
   "name": "astro-stylesheet",
   "author": "aFuzzyBear",
-  "keywords": ["astro","astro component","astro stylesheet", "css sanitizer", "open props"],
+  "keywords": [
+    "astro",
+    "astro component",
+    "astro stylesheet",
+    "css sanitizer",
+    "open props"
+  ],
   "description": "Astro StyleSheet <link> Component, This single Component provides the interface to apply a single stylesheet or many stylesheets in one place, have it also apply relevant sanitize.css scripts through use of a single Prop",
   "license": "MIT",
-  "version": "3.0.1",
+  "version": "3.0.3",
   "homepage": "https://github.com/aFuzzyBear/astro-academy/tree/master/packages/astro-ui/head/stylesheet",
   "bugs": {
     "url": "https://github.com/aFuzzyBear/astro-academy/tree/master/packages/astro-ui/head/stylesheet/issues"
@@ -14,11 +20,27 @@
     "url": "https://github.com/aFuzzyBear/astro-academy.git"
   },
   "type": "module",
-  "exports":{
-    ".": "./index.js",
-    "./stylesheet": "./Stylesheet.astro",
-    "./sanitizer": "./Sanitizer.astro",
-    "./openprops": "./OpenProps.astro"
+  "exports": {
+    ".": {
+      "import": "./index.js",
+      "types": "./types.d.ts"
+    },
+    "./manager": {
+      "import": "./Manager.astro",
+      "types": "./types.d.ts"
+    },
+    "./stylesheet": {
+      "import": "./Stylesheet.astro",
+      "types": "./types.d.ts"
+    },
+    "./sanitizer": {
+      "import": "./Sanitizer.astro",
+      "types": "./types.d.ts"
+    },
+    "./openprops": {
+      "import": "./OpenProps.astro",
+      "types": "./types.d.ts"
+    }
   },
   "types": "./types.d.ts"
 }
